--- a/jax_intro.ipynb
+++ b/jax_intro.ipynb
@@ -11,12 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "8dbae481-7fb3-45d4-acf6-6168599d657a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import jax.numpy as jnp\n",
+    "from jax import jit\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -41,6 +43,79 @@
     "x_jnp = jnp.linspace(0, 10, 1000)\n",
     "y_jnp = 2 * jnp.sin(x_jnp) * jnp.cos(x_jnp)\n",
     "plt.plot(x_jnp, y_jnp);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e808223d-6a0b-4246-a5af-836204d31ddb",
+   "metadata": {},
+   "source": [
+    "## Just-in-time (JIT) compilation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5cdfe753-7278-43ea-9b50-e83cc1a9e222",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def norm(X):\n",
+    "  X = X - X.mean(0)\n",
+    "  return X / X.std(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cad35d27-4029-4d6c-8eee-c30f12ef7381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_compiled = jit(norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "36421d08-87d2-4f12-818c-e57909f54729",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(1701)\n",
+    "X = jnp.array(np.random.rand(10000, 10))\n",
+    "np.allclose(norm(X), norm_compiled(X), atol=1E-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ed58b0a-f39e-4fda-a2e4-5818a238beca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "513 μs ± 34.7 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "363 μs ± 5.75 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit norm(X).block_until_ready()\n",
+    "%timeit norm_compiled(X).block_until_ready()"
    ]
   },
   {
