--- a/mcmc/buffon.ipynb
+++ b/mcmc/buffon.ipynb
@@ -154,9 +154,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9f488d4-a5fe-45ac-b184-ac64eaf35a0b",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "* [Gnedenko - The Theory of Probability](https://archive.org/details/GnedenkoTheoryOfProbability)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77a827bd-e68a-45af-b8b0-0d62030d90a9",
+   "id": "dea48b86-11bf-493b-83c6-c02785545c4f",
    "metadata": {},
    "outputs": [],
    "source": []
